set(BENCHMARK_TARGETS
    iluk_convergence_stats
    syevx_iluk_acc
    orthogonality_miniacc
    steqr_acc
    steqr_cta_acc
    stedc_acc
    syev_cta_acc
    syev_blocked_acc
    gesvd_blocked_acc
    syevx_acc
    band_reduction_benchmark
    bandr1_dump
    geqrf_benchmark
    gemm_benchmark
    gemm_heterogeneous_benchmark
    gemm_steady_benchmark
    gemm_128x32x32_family_benchmark
    gemm_128x64x32_family_benchmark
    gemm_transpose_benchmark
    symm_benchmark
    syrk_benchmark
    syr2k_benchmark
    trmm_benchmark
    gemv_benchmark
    spmm_benchmark
    trsm_benchmark
    ormqr_benchmark
    ormqr_blocked_benchmark
    ormqr_cta_benchmark
    orgqr_benchmark
    syev_benchmark
    syev_cta_benchmark
    syev_blocked_benchmark
    gesvd_blocked_benchmark
    syevx_benchmark
    lanczos_benchmark
    ortho_benchmark
    steqr_benchmark
    steqr_accuracy
    orthogonality_accuracy
    eigensolver_accuracy
    transpose_benchmark
    permuted_copy_benchmark
    matrix_copy_benchmark
    vector_benchmark
    stehr_benchmark
    stedc_benchmark
    latrd_lower_panel_benchmark
    sytrd_cta_benchmark
    sytrd_blocked_benchmark
    sytrd_sy2sb_benchmark
    sytrd_sb2st_benchmark
    cusolverdx_heev_benchmark
    cusolverdx_htev_benchmark
)

function(batchlas_add_benchmark_target target_name)
    add_executable(${target_name} ${target_name}.cc)
    batchlas_configure_binary_target(${target_name})
endfunction()

foreach(test ${BENCHMARK_TARGETS})
    batchlas_add_benchmark_target(${test})
endforeach()
